--- a/package.json
+++ b/package.json
@@ -12,11 +12,13 @@
     "@emotion/react": "^11.10.4",
     "@emotion/styled": "^11.10.4",
     "@mui/material": "^5.10.6",
+    "@reduxjs/toolkit": "^1.8.5",
     "axios": "^0.27.2",
     "jsdom": "^20.0.0",
     "next": "12.3.0",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-redux": "^8.0.4"
   },
   "devDependencies": {
     "@types/jsdom": "^20.0.0",
