--- a/package.json
+++ b/package.json
@@ -18,7 +18,10 @@
     "next": "12.3.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-redux": "^8.0.4"
+    "react-redux": "^8.0.4",
+    "redux-persist": "^6.0.0",
+    "redux-saga": "^1.2.1",
+    "typed-redux-saga": "^1.5.0"
   },
   "devDependencies": {
     "@types/jsdom": "^20.0.0",
