--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@emotion/react": "^11.10.4",
     "@emotion/styled": "^11.10.4",
+    "@hookform/resolvers": "^2.9.8",
     "@mui/material": "^5.10.6",
     "@reduxjs/toolkit": "^1.8.5",
     "axios": "^0.27.2",
@@ -18,10 +19,12 @@
     "next": "12.3.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-hook-form": "^7.36.1",
     "react-redux": "^8.0.4",
     "redux-persist": "^6.0.0",
     "redux-saga": "^1.2.1",
-    "typed-redux-saga": "^1.5.0"
+    "typed-redux-saga": "^1.5.0",
+    "yup": "^0.32.11"
   },
   "devDependencies": {
     "@types/jsdom": "^20.0.0",
